--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,13 +14,13 @@
             "-fexec-charset=GBK", // 生成的程序使用GBK编码，不加这条会导致Win下输出中文乱码；繁体系统改成BIG5
             // "-std=c11", // 要用的语言标准，根据自己的需要修改。c++可用c++14
         ], // 编译的命令，其实相当于VSC帮你在终端中输了这些东西
-        "type": "process", // process是把预定义变量和转义解析后直接全部传给command；shell相当于先打开shell再输入命令，所以args还会经过shell再解析一遍
+        "type": "shell", // process是把预定义变量和转义解析后直接全部传给command；shell相当于先打开shell再输入命令，所以args还会经过shell再解析一遍
         "group": {
             "kind": "build",
             "isDefault": true // 不为true时ctrl shift B就要手动选择了
         },
         "presentation": {
-            "echo": true,
+            "echo": false,
             "reveal": "always", // 执行任务时是否跳转到终端面板，可以为always，silent，never。具体参见VSC的文档
             "focus": false,     // 设为true后可以使执行task时焦点聚集在终端，但对编译C/C++来说，设为true没有意义
             "panel": "shared"   // 不同的文件的编译信息共享一个终端面板
