--- a/CODE_C/C_Multiple/.vscode/tasks.json
+++ b/CODE_C/C_Multiple/.vscode/tasks.json
@@ -5,9 +5,9 @@
             "label": "Compile", // 任务名称，与launch.json的preLaunchTask相对应
             "command": "gcc",   // 要使用的编译器，C++用g++
             "args": [
-                "${file}",
+                "${file}\\*.c",
                 "-o",    // 指定输出文件名，不加该参数则默认输出a.exe，Linux下默认a.out
-                "${fileDirname}\\bin\\${fileBasenameNoExtension}.exe",
+                "${fileDirname}\\${fileBasenameNoExtension}.exe",
                 "-g",    // 生成和调试有关的信息
                 //"-m64", // 不知为何有时会生成16位应用而无法运行，加上此条可强制生成64位的
                 "-Wall", // 开启额外警告
@@ -33,7 +33,7 @@
             "label": "run", 
             "type": "shell", 
             "dependsOn": "build", //任务依赖，因为要运行必须先构建，所以执行这个任务前必须先执行build任务，
-            "command": "${fileDirname}\\bin\\${fileBasenameNoExtension}.exe", //执行exe文件，只需要指定这个exe文件在哪里就好
+            "command": "${fileDirname}\\${fileBasenameNoExtension}.exe", //执行exe文件，只需要指定这个exe文件在哪里就好
             "group": {
                 "kind": "test", //这一组是‘测试’组，将run任务放在test组里方便我们用快捷键执行
                 "isDefault": true
